# client-attestation-sdk-polyglot

./: .gitignore  NOTICE  README.md  verify-interop.sh  verify-validation.sh
.github/workflows/: publish-npm.yml  publish-python.yml
go/: README.md  builders.go  builders_test.go  credential.go  go.mod  go.sum  keygen.go  openbao_test.go  roundtrip_test.go  signer.go  signer_test.go  signingkeypair.go  signingkeypair_test.go
go/tokenvalidator/: config.go  errors.go  jwks.go  resource.go  resource_test.go  result.go  validator.go  validator_extra_test.go  validator_test.go
interop/: VerifyInterop.java
java/: .gitignore  NOTICE  README.md  pom.xml
python/: README.md  emit.py  pyproject.toml  validate_emit.py
python/examples/: protected_resource_server.py  spiffe_bridge.py
python/src/client_attestation_sdk/: __init__.py  builders.py  credential.py  keys.py  signer.py  spiffe.py
python/src/token_validator/: __init__.py  config.py  discovery.py  errors.py  jwks.py  resource.py  result.py  validator.py
python/tests/: test_builders.py  test_jwks_discovery.py  test_keys.py  test_openbao.py  test_resource.py  test_roundtrip.py  test_signer_failures.py  test_spiffe.py  test_validator.py  test_validator_edge_cases.py
spire/spire-agent/: entrypoint.sh
typescript/: README.md  emit.ts  package-lock.json  package.json  tsconfig.json  validate-emit.ts
typescript/examples/: protected-resource-server.ts
typescript/src/: builders.ts  credential.ts  index.ts  signer.ts  signing-key-pair.ts
validation/: check.py  generate.py  tokens.json
vectors/: inputs.json
(+37 files in other folders)
