[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "client-attestation-sdk"
version = "0.1.0"
description = "Client-side builder SDK for OAuth Attestation-Based Client Authentication"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
dependencies = [
    "pyjwt>=2.8",
    "cryptography>=41",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
